--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,9 +5,10 @@
     <title>Reminder</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="assets/indexImage.ico" />
+    <link rel="icon" type="image" href="assets/gamer.png" />
   </head>
   <body>
     <app-root></app-root>
+
   </body>
 </html>
