--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
     <title>Reminder</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image" href="assets/gamer.png" />
+    <link rel="icon" type="image" href="frontend/src/assets/pics/gamer.png" />
   </head>
   <body>
     <app-root></app-root>
